3. Fix resetting some colour variables when changing colour setting from 'From
   current cover'
4. Change list/grid toggle icon to match LMS9.1's
5. Allow 'Compilations' entry to be pinned, but map artist_id to LMS's current
   ID when listing.
6. Fix compilation tracks in 'All tracks' when called from release-type
   header.
7. Fix 'More...', and other actions, when browsing into other roles.

5.9.1
-----
1. Fix genre images.
2. Add ellipsis to album-style queue sub-titles.
3. Try to prevent selecting 'Lyrion' colour scheme with tinted and coloured
   toolbars.
4. Don't allow usage of 'Lyrion' colour scheme in per-player setting.

5.9.0
-----
 1. Read half-star setting from ratings light, and use to control if can set
    half stars.
 2. Fix setting of half-stars in ratings dialog.
 3. Fix mapping of icons in apps.
 4. When splitting release lists into groups, only group releases with
    'compilation=1' into 'Compilations' if they have no explicit release type.
 5. Don't allow 'Compilations' entry to be pinned, as this has 'artist_id:'
    parameter that can change.
 6. If a 'My Music' item view has 'library_id' then don't ask whether to pin
    with ID or not - as will always use its ID.
 7. Improve album style queue with grouping - thanks to Darrell.
 8. Allow per-player colour setting.
 9. Add support for LMS9's portraitid attribute - thanks to Michael Herger.
10. If no playlist image found, use first valid image found in playlist tracks.
11. Add (server side) option to enable playlist images.
12. When prompting for discs to add to queue use '0' as keyboard shortcut for
    'All discs', and '1' .. '9' for discs themselves.
13. Fix padding in 'Manage players' dialog.
14. If JSONRPC calls fail and no player is attached then show a warning
    message indicating this.

5.8.3
-----
1. Don't react to slider, etc., changes in group volume dialog for fixed volume
   players when Material is set to 'Hide volume control'.