@@ -1700,6 +1700,30 @@ sub _cliCommand {
                 $cnt++;
             }
         }
+
+        if ($prefs->get('combineAppsAndRadio')) {
+            my $radiosReq = Slim::Control::Request::executeRequest(undef, ['radios', 0, 1000, 'menu:radio'] );
+            my $addTuneIn = 0;
+            foreach my $item ( @{ $radiosReq->getResult('item_loop') || [] } ) {
+                if (!$item->{'icon-id'} || !_startsWith($item->{'icon-id'}, '/plugins/TuneIn')) {
+                    foreach my $key (keys %$item) {
+                        $request->addResultLoop('item_loop', $cnt, $key, $item->{$key});
+                    }
+                    $cnt++;
+                } else {
+                    $addTuneIn = 1;
+                }
+            }
+            if ($addTuneIn==1) {
+                $request->addResultLoop('item_loop', $cnt, 'addAction', 'go');
+                $request->addResultLoop('item_loop', $cnt, 'type', 'redirect');
+                $request->addResultLoop('item_loop', $cnt, 'text', 'TuneIn');
+                $request->addResultLoop('item_loop', $cnt, 'svg', '/material/svg/tunein');
+                my $actions = { go => { cmd => [ 'radios' ], params => { menu => 'radio' } } };
+                $request->addResultLoop('item_loop', $cnt, 'actions', $actions);
+                $cnt++;
+            }
+        }
         $request->setStatusDone();
         return;
     }
